--- a/style.css
+++ b/style.css
@@ -12,6 +12,13 @@
     padding: 20px;
 }
 
+.container2 {
+    margin: 20px;
+    width: 95%;
+    border: 1px solid #918c8c;
+    border-radius: 10px;
+}
+
 .row {
     margin-top: 30px;
 }
